--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -24,4 +29,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/musicg-1.4.2.0.jar')
     compile files('libs/commons-math3-3.5.jar')
+    compile files('libs/androidplot-core-0.6.1.jar')
+    compile files('libs/commons-lang3-3.4.jar')
 }
