--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/musicg-1.4.2.0.jar')
     compile files('libs/commons-math3-3.5.jar')
     compile files('libs/androidplot-core-0.6.1.jar')
     compile files('libs/commons-lang3-3.4.jar')
+    compile 'com.android.support:appcompat-v7:22.1.0'
+    compile 'com.android.support:support-v4:22.1.0'
 }
